[gd_scene load_steps=13 format=2]

[ext_resource path="res://Levels/Level1.gd" type="Script" id=1]
[ext_resource path="res://Assets/Tilemaps/TestTilesPrimary.tres" type="TileSet" id=2]
[ext_resource path="res://Assets/Tilemaps/Walls.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/Tilemaps/Floors.tres" type="TileSet" id=4]
[ext_resource path="res://Puzzles/Target.tscn" type="PackedScene" id=5]
[ext_resource path="res://AudioNode.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainChar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Alter.tscn" type="PackedScene" id=8]
[ext_resource path="res://HPPack.tscn" type="PackedScene" id=9]
[ext_resource path="res://LevelChanger.tscn" type="PackedScene" id=10]
[ext_resource path="res://UpgradeAltar.tscn" type="PackedScene" id=11]
[ext_resource path="res://EnemyExit.tscn" type="PackedScene" id=12]

[node name="Level1" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
visible = false
tile_set = ExtResource( 2 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 1, -131072, 0, 1, -131071, 0, 2, -2, 0, 65536, -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65538, 65534, 0, 65536, 65535, 0, 65537, 0, 0, 65537, 1, 0, 65538, 131070, 0, 131072, 131071, 0, 262146, 65536, 0, 262145, 65537, 0, 131074, 65570, 0, 0, 65571, 0, 2, 196607, 0, 65536, 131072, 0, 65538, 131077, 0, 0, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 2, 131090, 0, 0, 131091, 0, 1, 131092, 0, 1, 131093, 0, 1, 131094, 0, 1, 131095, 0, 1, 131096, 0, 1, 131097, 0, 2, 131103, 0, 0, 131104, 0, 1, 131105, 0, 1, 131106, 0, 327682, 131107, 0, 327681, 131108, 0, 1, 131109, 0, 1, 131110, 0, 2, 262143, 0, 65536, 196608, 0, 65538, 196613, 0, 65536, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65538, 196626, 0, 65536, 196627, 0, 65537, 196628, 0, 65537, 196629, 0, 65537, 196630, 0, 65537, 196631, 0, 65537, 196632, 0, 65537, 196633, 0, 65538, 196639, 0, 65536, 196640, 0, 65537, 196641, 0, 65537, 196642, 0, 65537, 196643, 0, 65537, 196644, 0, 65537, 196645, 0, 65537, 196646, 0, 65538, 327679, 0, 65536, 262144, 0, 327681, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 327682, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 327681, 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 1, 262162, 0, 327682, 262163, 0, 65537, 262164, 0, 65537, 262165, 0, 65537, 262166, 0, 65537, 262167, 0, 65537, 262168, 0, 65537, 262169, 0, 327681, 262170, 0, 1, 262171, 0, 1, 262172, 0, 1, 262173, 0, 1, 262174, 0, 1, 262175, 0, 327682, 262176, 0, 65537, 262177, 0, 65537, 262178, 0, 65537, 262179, 0, 65537, 262180, 0, 65537, 262181, 0, 65537, 262182, 0, 65541, 262183, 0, 393221, 262184, 0, 393222, 393215, 0, 131072, 327680, 0, 131073, 327681, 0, 131073, 327682, 0, 131073, 327683, 0, 131073, 327684, 0, 131073, 327685, 0, 262146, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 262145, 327693, 0, 131073, 327694, 0, 131073, 327695, 0, 131073, 327696, 0, 131073, 327697, 0, 131073, 327698, 0, 262146, 327699, 0, 65537, 327700, 0, 65537, 327701, 0, 65537, 327702, 0, 65537, 327703, 0, 65537, 327704, 0, 65537, 327705, 0, 262145, 327706, 0, 131073, 327707, 0, 131073, 327708, 0, 131073, 327709, 0, 131073, 327710, 0, 131073, 327711, 0, 262146, 327712, 0, 65537, 327713, 0, 65537, 327714, 0, 65537, 327715, 0, 65537, 327716, 0, 65537, 327717, 0, 65537, 327718, 0, 65538, 393221, 0, 65536, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65538, 393234, 0, 65536, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 65537, 393238, 0, 65537, 393239, 0, 65537, 393240, 0, 65537, 393241, 0, 65538, 393247, 0, 65536, 393248, 0, 65537, 393249, 0, 65537, 393250, 0, 65537, 393251, 0, 65537, 393252, 0, 65537, 393253, 0, 65537, 393254, 0, 65538, 458757, 0, 131072, 458758, 0, 131073, 458759, 0, 131073, 458760, 0, 131073, 458761, 0, 131073, 458762, 0, 131073, 458763, 0, 131073, 458764, 0, 131074, 458770, 0, 131072, 458771, 0, 131073, 458772, 0, 131073, 458773, 0, 131073, 458774, 0, 131073, 458775, 0, 131073, 458776, 0, 131073, 458777, 0, 131074, 458783, 0, 131072, 458784, 0, 131073, 458785, 0, 131073, 458786, 0, 131073, 458787, 0, 131073, 458788, 0, 131073, 458789, 0, 131073, 458790, 0, 131074 )

[node name="TileMapWalls" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 5
collision_mask = 5
format = 1
tile_data = PoolIntArray( -131075, 0, 196608, -131074, 0, 393221, -131073, 0, 393221, -196608, 0, 393221, -196607, 0, 393221, -196606, 0, 196611, -65539, 0, 262151, -131070, 0, 262151, -3, 0, 262151, -65534, 0, 262151, 65533, 0, 262151, 2, 0, 262151, 33, 0, 196608, 34, 0, 393221, 35, 0, 393221, 36, 0, 196611, 131069, 0, 262151, 65538, 0, 262151, 65540, 0, 196608, 65541, 0, 393221, 65542, 0, 393221, 65543, 0, 393221, 65544, 0, 393221, 65545, 0, 393221, 65546, 0, 393221, 65547, 0, 393221, 65548, 0, 393221, 65549, 0, 196611, 65553, 0, 196608, 65554, 0, 393221, 65555, 0, 393221, 65556, 0, 393221, 65557, 0, 393221, 65558, 0, 393221, 65559, 0, 393221, 65560, 0, 393221, 65561, 0, 393221, 65562, 0, 196611, 65566, 0, 196608, 65567, 0, 393221, 65568, 0, 393221, 65569, 0, 393219, 65572, 0, 393216, 65573, 0, 393221, 65574, 0, 393221, 65575, 0, 196611, 196605, 0, 393216, 196606, 0, 196611, 131073, 0, 0, 131074, 0, 262147, 131076, 0, 262151, 131085, 0, 262151, 131089, 0, 262151, 131098, 0, 262151, 131102, 0, 262151, 131111, 0, 262151, 262142, 0, 262151, 196609, 0, 131072, 196610, 0, 393218, 196611, 0, 393221, 196612, 0, 393219, 196621, 0, 393216, 196622, 0, 393221, 196623, 0, 393221, 196624, 0, 393221, 196625, 0, 393219, 196634, 0, 393216, 196635, 0, 393221, 196636, 0, 393221, 196637, 0, 393221, 196638, 0, 393219, 196647, 0, 327687, 196649, 0, 393220, 196650, 0, 393221, 196651, 0, 196611, 327678, 0, 262151, 262187, 0, 262151, 393214, 0, 262151, 327719, 0, 196615, 327721, 0, 393220, 327722, 0, 393221, 327723, 0, 393219, 458750, 0, 393216, 458751, 0, 393221, 393216, 0, 393221, 393217, 0, 393221, 393218, 0, 393221, 393219, 0, 393221, 393220, 0, 196611, 393229, 0, 196608, 393230, 0, 393221, 393231, 0, 393221, 393232, 0, 393221, 393233, 0, 196611, 393242, 0, 196608, 393243, 0, 393221, 393244, 0, 393221, 393245, 0, 393221, 393246, 0, 196611, 393255, 0, 262151, 458756, 0, 262151, 458765, 0, 262151, 458769, 0, 262151, 458778, 0, 262151, 458782, 0, 262151, 458791, 0, 262151, 524292, 0, 393216, 524293, 0, 393221, 524294, 0, 393221, 524295, 0, 393221, 524296, 0, 393221, 524297, 0, 393221, 524298, 0, 393221, 524299, 0, 393221, 524300, 0, 393221, 524301, 0, 393219, 524305, 0, 393216, 524306, 0, 393221, 524307, 0, 393221, 524308, 0, 393221, 524309, 0, 393221, 524310, 0, 393221, 524311, 0, 393221, 524312, 0, 393221, 524313, 0, 393221, 524314, 0, 393219, 524318, 0, 393216, 524319, 0, 393221, 524320, 0, 393221, 524321, 0, 393221, 524322, 0, 393221, 524323, 0, 393221, 524324, 0, 393221, 524325, 0, 393221, 524326, 0, 393221, 524327, 0, 393219 )

[node name="TileMapFloors" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65570, 0, 0, 65571, 0, 0, 196607, 0, 0, 131072, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131103, 0, 0, 131104, 0, 0, 131105, 0, 0, 131106, 0, 0, 131107, 0, 0, 131108, 0, 0, 131109, 0, 0, 131110, 0, 0, 262143, 0, 0, 196608, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196639, 0, 0, 196640, 0, 0, 196641, 0, 0, 196642, 0, 0, 196643, 0, 0, 196644, 0, 0, 196645, 0, 0, 196646, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 262173, 0, 0, 262174, 0, 0, 262175, 0, 0, 262176, 0, 0, 262177, 0, 0, 262178, 0, 0, 262179, 0, 0, 262180, 0, 0, 262181, 0, 0, 262182, 0, 0, 262183, 0, 0, 262185, 0, 0, 262186, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327718, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393247, 0, 0, 393248, 0, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 393253, 0, 0, 393254, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458783, 0, 0, 458784, 0, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 458790, 0, 0 )

[node name="Target" parent="." instance=ExtResource( 5 )]
position = Vector2( 2726, 289.707 )
TargetTrigger = true

[node name="AudioNode" parent="." instance=ExtResource( 6 )]

[node name="MainChar" parent="." instance=ExtResource( 7 )]
position = Vector2( -1.2811, 3.84372 )

[node name="Altar" parent="." instance=ExtResource( 8 )]
position = Vector2( 581.458, 327.116 )
AltarType = 1

[node name="Label" type="Label" parent="."]
margin_left = 501.0
margin_top = 198.0
margin_right = 672.0
margin_bottom = 279.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "This is a Blood Altar, Blood Altars offer various things in exchange for you health."
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 1319.71
margin_top = 206.667
margin_right = 1490.71
margin_bottom = 280.667
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "This is a Blood Pack, these restore health and are dropped from killed enemies."
align = 1
autowrap = true

[node name="Label3" type="Label" parent="."]
margin_left = 2006.34
margin_top = 156.658
margin_right = 2205.34
margin_bottom = 258.658
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Above is portal to the next level...... the portal will remain closed until the puzzle is solved. The tools you need will cost blood."
align = 1
autowrap = true

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = 2267.85
margin_top = 159.113
margin_right = 2466.85
margin_bottom = 275.113
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Congrats, you have unlocked the ranged Bloodshot attack. Right Mouse Button to shoot, try shooting that target. Careful, Bloodshots cost health.
	"
align = 1
autowrap = true

[node name="Label5" type="Label" parent="."]
margin_left = -89.0422
margin_top = -101.676
margin_right = 81.9578
margin_bottom = -27.6758
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "If you get stuck, pless ESC to return to the previous Checkpoint."
align = 1
autowrap = true

[node name="Label6" type="Label" parent="."]
margin_left = 446.0
margin_top = 399.0
margin_right = 726.0
margin_bottom = 492.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "This Blood Alter allows you to exchange a small amount of blood to spawn an enemy. Killing the enemy will yield a  much stronger Blood Pack to earn back your HP."
align = 1
autowrap = true

[node name="HPPack" parent="." instance=ExtResource( 9 )]
position = Vector2( 1402.94, 319.972 )

[node name="LevelChanger" parent="." instance=ExtResource( 10 )]
position = Vector2( 2241.36, 89.8398 )
worldScene = "res://Levels/Level2.tscn"

[node name="UpgradeAltar" parent="." instance=ExtResource( 11 )]
position = Vector2( 2249.22, 319.212 )

[node name="EnemyExit" parent="." instance=ExtResource( 12 )]
position = Vector2( 847.747, 324.637 )

